--- a/backend/.env
+++ b/backend/.env
@@ -1,6 +1,6 @@
 DB_USER=postgres
-DB_PASSWORD=chris
-DB_NAME=room
+DB_PASSWORD=sanskriti2005
+DB_NAME=rentmate
 DB_PORT=5432
 PORT=5000
 JWT_SECRET=supersecretkey
